--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,17 @@ build/
 lib/*.jar
 target
 samples/scala-play2/logs
+logs
+project/project
+project/target
+target
+tmp
+.history
+.cache
+.classpath
+.project
+.settings
+.clover
+*.iml
+.idea
+conf/evolutions/default/1.sql
